add: comparador, caso de teste
