# src/application/controllers/controller.js
@@ -1,53 +1,61 @@
-import { ExternalAPIError, NotFoundError } from "../../helpers/errors.js";
-import BairroService from "../services/BairroService.js";
-import IntegrationService from "../services/IntegrationService.js";
-import { distanciaEntrePontosUseCase } from "../usecases/distanciaEntrePontosUseCase.js";
+import { respostaErroPadrao } from "../../helpers/responses.js";
+import bairroService from "../services/BairroService.js";
+import integrationService from "../services/IntegrationService.js";
+import {compararBairrosUseCase, distanciaEntrePontosUseCase} from "../usecases/useCases.js";
 
-const bairroService = new BairroService;
-const integrationService = new IntegrationService;
 
-export default class Controller {
+export default function controller() {
+    const bairroServ = bairroService();
+    const integrationServ = integrationService();
 
-    async getBairroById(id) {
-        try {
-            const result = await bairroService.getBairroById(id)
+    return {
+        
+        async getBairroById(id) {
+            try {
+                const result = await bairroServ.getBairroById(id)
 
-            return result;
-        } catch(error) {
-            throw new NotFoundError(error.message)
+                return result;
+            } catch(error) {
+                return respostaErroPadrao(error.statusCode, error.message)
+            }
+        },
+
+        async getInfobyCEP(cep){
+            try {
+                const result = await bairroServ.getBairroByCEP(cep)
+                
+                return result;
+            } catch (error) {
+                return respostaErroPadrao(error.statusCode, error.message)
+            }
+
+        },
+
+        async getLatLongbyCEPeNumero(numero, cep){
+            try {
+                const result = await integrationServ.getlatLongByNumeroECEP(numero, cep)
+                
+                return result;
+            } catch (error) {
+                return respostaErroPadrao(error.statusCode, error.message)
+            }
+
+        },
+
+        async getDistancia(origem, destino){
+            try {                
+                return await distanciaEntrePontosUseCase(origem, destino);
+            } catch (error) {
+                return respostaErroPadrao(error.statusCode, error.message)
+            }
+        },
+
+        async comparar(origem, destino, localInteresse){
+            try {                
+                return await compararBairrosUseCase(origem, destino, localInteresse);
+            } catch (error) {
+                return respostaErroPadrao(error.statusCode, error.message)
+            }
         }
-    }
-
-    async getInfobyCEP(cep){
-        try {
-            const result = await bairroService.getBairroByCEP(cep)
-
-            return result;
-        } catch (error) {
-            throw new ExternalAPIError(error.message, error.statusCode)
-        }
-
-    }
-
-    async getLatLongbyCEPeNumero(numero, cep){
-        try {
-            const result = await integrationService.getlatLongByNumeroECEP(numero, cep)
-
-            return result;
-        } catch (error) {
-            throw new ExternalAPIError(error.message, error.statusCode)
-        }
-
-    }
-
-    async getDistancia(origem, destino){
-        try {
-            const usecase = new distanciaEntrePontosUseCase();
-
-            return await usecase.execute(origem, destino);
-        } catch (error) {
-            throw new ExternalAPIError(error.message, error.statusCode)
-        }
-
     }
 }
